2003-03-14  Martin Willers <willers@xm-arts.de>
	- added "Configure event" button for quick access to kcontrol
	- some internal tidying and cleanups
	- using convenience class TeaListItem instead of QListViewItem
	- small optimization: don't use lastitem() of listbox (which traverses whole list),
	  work with itemBelow() instead
	(patches provided by Daniel Teske)

2003-03-07  (external)
	- Implement place holder for tea sort like requested in #54551

2003-02-23  Martin Willers <willers@xm-arts.de>
	- "beep" option now uses KNotify::event()
	  (need own "steeping" sound now)
	(patch provided by Daniel Teske <teske@bigfoot.com>)

2003-02-22  Martin Willers <willers@xm-arts.de>
	- don't display ticks in left-click menu

2003-02-15  Martin Willers <willers@xm-arts.de>
	- using KActions for start, stop, and configure entries
	- display list of configured teas on left-click,
	  making one-click starting of a new tea possible
	- some cleanups

2003-02-07  Martin Willers <willers@xm-arts.de>
	- fixed inserting of new items into listview
	- simplified layout in config-window
	- fixed sizing of labels in config-window
	- using QValueVector instead of a QStringList for teas
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2003-01-07  Martin Willers <willers@xm-arts.de>
	- fixed destructor of class toplevel
	- finally avoiding stretching of buttons in config-dialog
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2003-01-02  Martin Willers <willers@xm-arts.de>
	- configuration dialog now selects first tea available
	- small optimization in TopLevel::teaSelected()
	- when a tea is brewing, more menu entries are now disabled
	(patches provided by Daniel Teske <teske@bigfoot.com>)

2002-07-14  Martin Willers <willers@xm-arts.de>
	- KPassivePopup now stays on-screen until acknowlegded by mouse-click
	- now saving state of actionEnable to config

2002-06-23  Matthias Hoelzer-Kluepfel <mhk@kde.org>
	- added left-click menu while steeping